--- a/audio_story/pubspec.yaml
+++ b/audio_story/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.4
   provider: ^6.0.1
+  mask_text_input_formatter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
