--- a/audio_story/pubspec.yaml
+++ b/audio_story/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^3.1.4
   provider: ^6.0.1
   mask_text_input_formatter: ^2.0.0
+  cloud_firestore: ^2.5.4
 
 dev_dependencies:
   flutter_test:
