--- a/audio_story/pubspec.yaml
+++ b/audio_story/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.1
   mask_text_input_formatter: ^2.0.0
   cloud_firestore: ^3.1.0
+  firebase_storage: ^10.1.0
+  file_picker: ^4.2.2+1
 
 dev_dependencies:
   flutter_test:
