--- a/audio_story/pubspec.yaml
+++ b/audio_story/pubspec.yaml
@@ -34,11 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.2.0
+  # Provider
   provider: ^6.0.1
+
+  # Input text mask
   mask_text_input_formatter: ^2.0.0
+
+  # Database
+  firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
   firebase_storage: ^10.1.0
+
+  # Work with local file
   file_picker: ^4.2.2+1
 
 dev_dependencies:
