--- a/audio_story/pubspec.yaml
+++ b/audio_story/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # Provider
-  provider: ^6.0.1
+  provider: ^5.0.0
 
   # Input text mask
   mask_text_input_formatter: ^2.0.0
@@ -47,6 +47,12 @@ dependencies:
 
   # Work with local file
   file_picker: ^4.2.2+1
+
+  #Sound play/record
+  flutter_sound_lite: 8.1.9
+
+  #Permission
+  permission_handler: 8.1.2
 
 dev_dependencies:
   flutter_test:
