--- a/audio_story/android/app/build.gradle
+++ b/audio_story/android/app/build.gradle
@@ -28,23 +28,22 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 30
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
     sourceSets {
+             main {
+            assets {
+                srcDirs 'src/main/assets'
+            }
+        }
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.audio_story"
-        minSdkVersion 24
+        minSdkVersion 24 // 18 works fine for the player, but the recorder needs at least 24. Speech to Text need 21, Flutter FFmpeg needs 24
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
