--- a/audio_story/android/app/src/main/AndroidManifest.xml
+++ b/audio_story/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
    <application
         android:label="audio_story"
         android:icon="@mipmap/ic_launcher">
+        android:requestLegacyExternalStorage=”true”
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
